--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,15 +28,15 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<div th:text="${session.user}"></div>-->
-                    <li class="dropdown" th:if = "${session.githubuser != null}">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.githubuser.getName()}"> <span class="caret"></span></a>
+                    <li class="dropdown" th:if = "${session.user != null}">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">消息中心</a></li>
                             <li><a href="#">个人资料</a></li>
                             <li><a href="#">退出登录</a></li>
                         </ul>
                     </li>
-                    <li th:if = " ${session.githubuser == null}">
+                    <li th:if = " ${session.user == null}">
                         <a href="https://github.com/login/oauth/authorize?client_id=4eee3979ed604b285c24&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a>
                     </li>
 
